refactor: 리소스 id 컬렉션에 대한 검증문 리팩토링
- 서비스 매개변수로 리소스 등록번호 컬렉션 전달시 각각의 리소스에 대하여 소유 권한 여부를 검증하도록 리팩토링